--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ on:
                 required: true
             multipleValues:
                 description: 'Multiple Values'
-                required: true
+                required: false
 
 jobs:
 
